5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1594_1800.log
== TEST (2019-04-04 16:30:18) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

-- OUTPUT:
-888582205.3073307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:31:55) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

numerador = ((a**2+b**2+c**2))
-- OUTPUT:
-888582205.3073307
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:32:28) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

numerador = ((a**2+b**2+c**2))
print(numerador/a+b+c)
-- EXECUTION TIME:
0.222034
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.127659574468
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444444445
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:32:31) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

numerador = ((a**2+b**2+c**2))
print(numerador/a+b+c)
-- EXECUTION TIME:
0.217819
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.127659574468
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444444445
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:32:32) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

numerador = ((a**2+b**2+c**2))
print(numerador/a+b+c)
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:32:57) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

numerador = ((a**2+b**2+c**2))
print(numerador/a+b+c)
print(round, 3)
-- EXECUTION TIME:
0.150736
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
<built-in function round> 3
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.127659574468
<built-in function round> 3
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444444445
<built-in function round> 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:32:59) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

numerador = ((a**2+b**2+c**2))
print(numerador/a+b+c)
print(round, 3)
-- OUTPUT:
151.25
<built-in function round> 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:34:53) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))
resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 3))
-- OUTPUT:
25.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:35:01) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))
resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 3))
-- EXECUTION TIME:
0.211219
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.868
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.151
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:35:12) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 3))
-- EXECUTION TIME:
0.190262
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.868
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.151
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:35:21) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 'n'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(resultadoa/resultadob, 'n'))
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:35:25) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 'n'))
-- EXECUTION TIME:
0.178191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 7, in <module>
    print(round(resultadoa/resultadob, 'n'))
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:35:32) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 20))
-- EXECUTION TIME:
0.170298
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:35:34) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 20))
-- EXECUTION TIME:
0.166433
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:35:35) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 20))
-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:35:54) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 10))
-- EXECUTION TIME:
0.153622
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203046
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509433962
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:00) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2/(a+b+c, 4)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a**2+b**2+c**2/(a+b+c, 4)))
TypeError: unsupported operand type(s) for /: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:37:03) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2/(a+b+c, 4)))

-- EXECUTION TIME:
0.255271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 5, in <module>
    print(round(a**2+b**2+c**2/(a+b+c, 4)))
TypeError: unsupported operand type(s) for /: 'float' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:04) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2/(a+b+c, 4)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a**2+b**2+c**2/(a+b+c, 4)))
TypeError: unsupported operand type(s) for /: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:20) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2/(a+b+c, 4))

-- ERROR:
File "XXXX", line 6
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:25) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2/(a+b+c, 4))
-- ERROR:
File "XXXX", line 6
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:42) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2)/(a+b+c, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a**2+b**2+c**2)/(a+b+c, 4))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:37:44) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2)/(a+b+c, 4))
-- EXECUTION TIME:
0.125947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 5, in <module>
    print(round(a**2+b**2+c**2)/(a+b+c, 4))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:46) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

print(round(a**2+b**2+c**2)/(a+b+c, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a**2+b**2+c**2)/(a+b+c, 4))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:39:48) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

valor = (a**2+b**2+c**2/(a+b+c))
print(round(valor, 3))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:39:50) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

valor = (a**2+b**2+c**2/(a+b+c))
print(round(valor, 3))
-- EXECUTION TIME:
0.241529
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.365
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.019
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:39:51) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

valor = (a**2+b**2+c**2/(a+b+c))
print(round(valor, 3))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:40:29) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

valor = (a**2+b**2+c**2/(a+b+c))
print(round(valor, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:40:55) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:41:07) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 7))
-- EXECUTION TIME:
0.109054
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:41:12) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 7))
-- EXECUTION TIME:
0.183661
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:41:13) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:41:15) 
-- CODE:
a = float(input('valor de a:'))
b = float(input('valor de b:'))
c = float(input('valor de c:'))

resultadoa = ((a**2+b**2+c**2))
resultadob = (a+b+c)
print(round(resultadoa/resultadob, 7))
-- EXECUTION TIME:
0.173648
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
